# comunicacao_entre_containers

./: .gitignore  docker-compose.yml
backend/: Dockerfile  package-lock.json  package.json  pyproject.toml
backend/fastapi_vue/: app.py
frontend/vue_project/: index.html  package-lock.json  package.json
frontend/vue_project/src/: App.vue  main.js
frontend/vue_project/src/plugins/: axios.js
