[tool.poetry]
name = "fastapi-vue"
version = "0.1.0"
description = ""
authors = ["filps <filipepinho2010@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = {extras = ["standard"], version = "^0.112.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
